--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=192&id=15642&format=png" type="image/x-icon">
+    <title>Happy Birthday </title>
     <style>
         * {
             margin: 0;
@@ -79,7 +80,6 @@
             -webkit-transform: rotatey(-85deg);
             -ms-transform: rotatey(-85deg);
             transform: rotatey(-95deg);
-
         }
     </style>
 </head>
